--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,4 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Nathan\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.commons-validator-1.6.jar=C:\\Users\\nquir\\Documents\\jars\\commons-validator-1.6.jar
+file.reference.sqlite-jdbc-3.23.1.jar=C:\\Users\\nquir\\Documents\\jars\\sqlite-jdbc-3.23.1.jar
+user.properties.file=C:\\Users\\nquir\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
