--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.jar=${dist.dir}/TutoringFX.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.commons-validator-1.6.jar=C:\\Users\\Nathan\\Documents\\Jars\\commons-validator-1.6.jar
+file.reference.commons-validator-1.6.jar-1=C:\\Users\\nquir\\Documents\\jars\\commons-validator-1.6.jar
 file.reference.sqlite-jdbc-3.23.1.jar=C:\\Users\\Nathan\\Documents\\Jars\\sqlite-jdbc-3.23.1.jar
 file.reference.TutoringFX-src=src
 includes=**
@@ -35,7 +36,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.commons-validator-1.6.jar}:\
-    ${file.reference.sqlite-jdbc-3.23.1.jar}
+    ${file.reference.sqlite-jdbc-3.23.1.jar}:\
+    ${file.reference.commons-validator-1.6.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
